--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,27 @@ config/default.json
 
 # Working trees
 workingtree/
+
+# Client 
+
+# dependencies
+client/node_modules
+client/.pnp
+client/.pnp.js
+
+# testing
+client/coverage
+
+# production
+client/build
+
+# misc
+client/.DS_Store
+client/.env.local
+client/.env.development.local
+client/.env.test.local
+client/.env.production.local
+
+client/npm-debug.log*
+client/yarn-debug.log*
+client/yarn-error.log*
